IntegrationsTest post split + global refactoring
Split up integration test into two, that follow the communicationdiagrams. They are set in ordered execution so they run as intended.

Removed unused imports and variables from project.

Surpressed serial warnings.